--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="today_date">Today is %1$s</string>
+    <string name="maps_api_key" />
+    <string name="start_a_new_run">Start a New Run</string>
+    <string name="view_previous_runs">View Previous Runs</string>
+    <string name="welcome_back">Welcome back!</string>
 </resources>
