--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="start_a_new_run">Start a New Run</string>
     <string name="view_previous_runs">View Previous Runs</string>
     <string name="welcome_back">Welcome back!</string>
+    <string name="pace_0_00_min_mi">Pace: 0:00 min/mi</string>
+    <string name="duration_00_00_00">Duration: 00:00:00</string>
+    <string name="distance_0_0_mi">Distance: 0.0 mi</string>
 </resources>
