--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,21 @@
     <string name="resume">Resume</string>
     <string name="start">Start</string>
     <string name="_00_00_00">00:00:00</string>
+    <string name="pace_n_a">Pace: N/A</string>
+    <string name="error_fetching_weather_data">Error fetching weather data</string>
+    <string name="weather_data_unavailable">Weather data unavailable</string>
+    <string name="run_id">Run ID</string>
+    <string name="date">Date</string>
+    <string name="distance">Distance</string>
+    <string name="duration">Duration</string>
+    <string name="delete">Delete</string>
+    <string name="_00_00">00:00</string>
+    <string name="_0_00_mi_min">0.00 mi/min</string>
+    <string name="average_pace">average pace</string>
+    <string name="_0_00_mi">0.00 mi</string>
+    <string name="distance2">distance</string>
+    <string name="start2">Start</string>
+    <string name="reset">Reset</string>
+    <string name="save_run">Save Run</string>
+    <string name="uninstall_app">Uninstall App</string>
 </resources>
