--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,22 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="today_date">Today is %1$s</string>
     <string name="maps_api_key" />
-    <string name="start_a_new_run">Start a New Run</string>
-    <string name="view_previous_runs">View Previous Runs</string>
+    <string name="start_a_new_run">START</string>
+    <string name="view_previous_runs">Previous Runs</string>
     <string name="welcome_back">Welcome back!</string>
+    <string name="start">Start</string>
+    <string name="_00_00">00:00</string>
+    <string name="_0_00_mi_min">0.00 min/mi</string>
+    <string name="average_pace">Average Pace</string>
+    <string name="_0_00_mi">0.00 mi</string>
+    <string name="distance">Distance</string>
+    <string name="reset">Reset</string>
+    <string name="save_run">Save Run</string>
+    <string name="settings_button">Settings button</string>
+    <string name="uninstall">Uninstall</string>
+    <string name="empty">You haven\'t logged any runs yet. Start your first run today!</string>
+    <string name="run_id">Run ID</string>
+    <string name="date">Date</string>
+    <string name="fragment_distance">Distance</string>
+    <string name="duration">Duration</string>
 </resources>
